--- a/index.html
+++ b/index.html
@@ -32,21 +32,18 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">Tables and Graphs</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="table_1.html">Table 1</a></li>
+										<li><a href="table_2.html">table 2</a></li>
 										<li>
-											<a href="#">And a submenu &hellip;</a>
+											<a href="#">Graphs</a>
 											<ul>
-												<li><a href="#">Lorem ipsum dolor</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
+												<li><a href="graph_1.html">graph_1</a></li>
+												<li><a href="graph_2.html">graph_2</a></li>
+												<li><a href="graph_3.html">graph_3</a></li>
+												<li><a href="graph_4.html">graph_4</a></li>
 											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
@@ -59,7 +56,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="Gideon Victor"/></span>
 							<h1>Gideon Victor</h1>
-							<p>Business Development Professional</p> 
+							<p>Landing Page</p> 
 						</header>
 						<footer>
 							<ul class="icons">
