--- a/compare.html
+++ b/compare.html
@@ -46,16 +46,20 @@
 											</ul>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="compare.html">Compare</a></li>
 							</ul>
 						</nav>
 				<!-- Main -->
-					<section id="main">
+					<section id="main" style="margin-top: 150px;">
 						<header>
 							<span class="avatar"><img src="images/wild_shots_0.png" alt="Gideon Victor"/></span>
 							<h1>Shots by Minnesota Wild</h1>
+							<span class="avatar"><img src="images/Devils_shots_0.png" alt="Gideon Victor"/></span>
+							<h1>Shots by New Jersey Devils</h1>
+							<span class="avatar"><img src="images/Predators_shots_0.png" alt="Gideon Victor"/></span>
+							<h1>Shots by Nashville Predators</h1>
+							<span class="avatar"><img src="images/Lightning_shots_0.png" alt="Gideon Victor"/></span>
+							<h1>Shots by Tampa Bay Lightning</h1>
 						</header>
 						<footer>
 							<ul class="icons">
