--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 								<li>
 									<a href="#">Tables and Graphs</a>
 									<ul>
-										<li><a href="table_1.html">Table 1</a></li>
-										<li><a href="table_2.html">table 2</a></li>
+										<li><a href="Table_1.html">Table 1</a></li>
+										<li><a href="Table_2.html">table 2</a></li>
 										<li>
 											<a href="#">Graphs</a>
 											<ul>
