--- a/compare.html
+++ b/compare.html
@@ -52,13 +52,13 @@
 				<!-- Main -->
 					<section id="main" style="margin-top: 150px;">
 						<header>
-							<span class="avatar"><img src="images/wild_shots_0.png" alt="Gideon Victor"/></span>
+							<span class="avatar"><img src="images/Wild_Shots_0.png" alt="Gideon Victor"/></span>
 							<h1>Shots by Minnesota Wild</h1>
-							<span class="avatar"><img src="images/Devils_shots_0.png" alt="Gideon Victor"/></span>
+							<span class="avatar"><img src="images/Devils_Shots_0.png" alt="Gideon Victor"/></span>
 							<h1>Shots by New Jersey Devils</h1>
-							<span class="avatar"><img src="images/Predators_shots_0.png" alt="Gideon Victor"/></span>
+							<span class="avatar"><img src="images/Predators_Shots_0.png" alt="Gideon Victor"/></span>
 							<h1>Shots by Nashville Predators</h1>
-							<span class="avatar"><img src="images/Lightning_shots_0.png" alt="Gideon Victor"/></span>
+							<span class="avatar"><img src="images/Lightning_Shots_0.png" alt="Gideon Victor"/></span>
 							<h1>Shots by Tampa Bay Lightning</h1>
 						</header>
 						<footer>
