--- a/graph_2.html
+++ b/graph_2.html
@@ -52,7 +52,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/Devils_shots_0.png" alt="Gideon Victor"/></span>
+							<span class="avatar"><img src="images/Devils_Shots_0.png" alt="Gideon Victor"/></span>
 							<h1>Shots by New Jersey Devils</h1>
 						</header>
 						<footer>
