--- a/graph_1.html
+++ b/graph_1.html
@@ -52,7 +52,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/wild_shots_0.png" alt="Gideon Victor"/></span>
+							<span class="avatar"><img src="images/Wild_Shots_0.png" alt="Gideon Victor"/></span>
 							<h1>Shots by Minnesota Wild</h1>
 						</header>
 						<footer>
