--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-<!-- Nav -->
+<!-- Nav 
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
@@ -50,13 +50,13 @@
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
-						</nav>
+						</nav>-->
 				<!-- Main -->
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="Gideon Victor"/></span>
 							<h1>Gideon Victor</h1>
-							<p>Landing Page</p> 
+							<p>Business Intelligence Developer</p> 
 						</header>
 						<footer>
 							<ul class="icons">
