--- a/index.html
+++ b/index.html
@@ -27,34 +27,13 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-<!-- Nav 
-						<nav id="nav">
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Tables and Graphs</a>
-									<ul>
-										<li><a href="Table_1.html">Table 1</a></li>
-										<li><a href="Table_2.html">table 2</a></li>
-										<li>
-											<a href="#">Graphs</a>
-											<ul>
-												<li><a href="graph_1.html">graph_1</a></li>
-												<li><a href="graph_2.html">graph_2</a></li>
-												<li><a href="graph_3.html">graph_3</a></li>
-												<li><a href="graph_4.html">graph_4</a></li>
-											</ul>
-									</ul>
-								</li>
-								<li><a href="compare.html">Compare</a></li>
-							</ul>
-						</nav>-->
+
 				<!-- Main -->
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="Gideon Victor"/></span>
 							<h1>Gideon Victor</h1>
-							<p>Business Intelligence Developer</p> 
+							<p>Business Development Professional</p> 
 						</header>
 						<footer>
 							<ul class="icons">
@@ -85,13 +64,5 @@
 					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
 				}
 			</script>
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
 	</body>
 </html>
