fixing work mistake

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 									<h1>Gideon Victor</h1>
 									<p>Business Intelligence Developer</p>
 								</header>
-								<a href="#bio" class="jumplink pic">
+								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
 									<img src="images/me.jpg" alt="" />
 								</a>
 							</article>
 						<!-- Work -->
-							<article id="bio" class="panel intro">
+							<article id="work" class="panel intro">
 								<span class="jumplink pic">
 									<img src="images/20160704_0856200.jpg" alt="" />
 								</span>
