Adding image back link

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 							</article>
 						<!-- Work -->
 							<article id="work" class="panel intro">
-								<span class="jumplink pic">
+								<a href="#" class="jumplink pic">
+									<span class="notarrow icon solid fa-chevron-left"><span>See my work</span></span>
 									<img src="images/20160704_0856200.jpg" alt="" />
-								</span>
+								</a>
 								<header>
 									<h2>Bio</h2>
 									<p>I am a SQL Developer currently working at BootBarn in Orange County, CA.<br /><br />
