--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<header>
 									<h2>Bio</h2>
 									<p>I am a SQL Developer currently working at BootBarn in Orange County, CA.<br /><br />
-									In my free time I enjoy hiking, biking, playing sports, and enjoying God's creation with my wife. To get in contact with me, please connect with me on LinkedIn at the link above.</p>
+									I enjoy hiking, biking, playing sports, and enjoying God's creation with my wife. To get in contact with me, please connect with me on LinkedIn at the link above.</p>
 								</header>
 							</article>
 					</div>
