--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			<div id="wrapper">
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-book-open"><span>Work</span></a>
-						<a href="https://linkedin.com/in/gideonvictor" target="_blank" class="icon brands fa-linkedin"><span>LinkedIn</span></a>
+						<a href="#work" class="icon brands fa-github"><span>GitHub</span></a>
+						<a href="#LinkedIn" class="icon brands fa-linkedin"><span>LinkedIn</span></a>
 					</nav>
 					<div id="main">
 							<article id="home" class="panel intro">
@@ -41,10 +41,19 @@
 									<img src="images/20160704_0856200.jpg" alt="" />
 								</a>
 								<header>
-									<h2>Bio</h2>
-									<p>I am a SQL Developer currently working at BootBarn in Orange County, CA.<br /><br />
-									I enjoy hiking, biking, playing sports, and enjoying God's creation with my wife. To get in contact with me, please connect with me on LinkedIn at the link above.</p>
+									<h2>Work</h2>
+									<bodytext>I am a SQL Developer currently working at BootBarn in Orange County, CA.<br />
+									Lately, I've been working on using Python to scrape data from html and json reports from the NHL. I have also been working on a python app that connects to the eTrade API. Visit my GitHub to see some of my progress.
+									<br /><br /><a href="https://github.com/gideonvictor" target="_blank"><i class="fab fa-github"></i> GitHub</a></bodytext>
 								</header>
+							</article>
+							<article id="LinkedIn" class="panel">
+								<header>
+									<h2>Resume</h2>
+								</header>
+								<p>
+									<a href="https://www.linkedin.com/in/gideonvictor/" target="_blank"><i class="icon brands fa-linkedin"></i> LinkedIn</a>
+								</p>
 							</article>
 					</div>
 				<!-- Footer -->
