updating work page

--- a/index.html
+++ b/index.html
@@ -6,19 +6,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<!-- Google Tag Manager -->
-		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-		})(window,document,'script','dataLayer','GTM-KCBRZMR');</script>
-		<!-- End Google Tag Manager -->
-	</head>
-	<body class="is-preload">
-		<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KCBRZMR"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
 			<div id="wrapper">
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
@@ -44,9 +31,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								</a>
 								<header>
 									<h2>Work</h2>
-									<bodytext>I am a SQL Developer currently working at BootBarn in Orange County, CA.<br />
+									<p>
 									Lately, I've been working on using Python to scrape data from html and json reports from the NHL. I have also been working on a python app that connects to the eTrade API. Visit my GitHub to see some of my progress.
-									<br /><br /><a href="https://github.com/gideonvictor" target="_blank"><i class="fab fa-github"></i> GitHub</a></bodytext>
+									<br /><br /><a href="https://github.com/gideonvictor" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
 								</header>
 							</article>
 							<article id="LinkedIn" class="panel">
@@ -54,6 +41,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 									<h2>Resume</h2>
 								</header>
 								<p>
+									I am a SQL Developer currently working at BootBarn in Orange County, CA.<br />
 									<a href="https://www.linkedin.com/in/gideonvictor/" target="_blank"><i class="icon brands fa-linkedin"></i> LinkedIn</a>
 								</p>
 							</article>
