--- a/index.html
+++ b/index.html
@@ -24,27 +24,28 @@
 								</a>
 							</article>
 						<!-- Work -->
-							<article id="work" class="panel intro">
-								<a href="#" class="jumplink pic">
-									<span class="notarrow icon solid fa-chevron-left"><span>See my work</span></span>
-									<img src="images/20160704_0856200.jpg" alt="" />
-								</a>
-								<header>
-									<h2>Work</h2>
-									<p>
-									Lately, I've been working on using Python to scrape data from html and json reports from the NHL. I have also been working on a python app that connects to the eTrade API. Visit my GitHub to see some of my progress.
-									<br /><br /><a href="https://github.com/gideonvictor" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
-								</header>
-							</article>
-							<article id="LinkedIn" class="panel">
-								<header>
-									<h2>Resume</h2>
-								</header>
-								<p>
-									I am a SQL Developer currently working at BootBarn in Orange County, CA.<br />
-									<a href="https://www.linkedin.com/in/gideonvictor/" target="_blank"><i class="icon brands fa-linkedin"></i> LinkedIn</a>
-								</p>
-							</article>
+						<article id="work" class="panel intro">
+							<header>
+								<h1>Work</h1>
+								<p>Lately, I've been working on using Python to scrape data from html and json reports from the NHL. I have also been working on a python app that connects to the eTrade API. Visit my GitHub to see some of my progress.<a href="https://github.com/gideonvictor" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
+							</header>
+							<a href="#LinkedIn" class="jumplink pic">
+								<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+								<img src="images/20160704_0856200.jpg" alt="" />
+							</a>
+						</article>
+								<article id="LinkedIn" class="panel intro">
+
+									<a href="#work" class="jumplink pic">
+										<span class="notarrow icon solid fa-chevron-left"><span>See my work</span></span>
+										<img src="images/20160714_161520.jpg" alt="" />
+									</a>
+									<header>
+										<h1>Resume</h1>
+										<p>I am a SQL Developer currently working at BootBarn in Orange County, CA.<br />
+										<a href="https://www.linkedin.com/in/gideonvictor/" target="_blank"><i class="icon brands fa-linkedin"></i> LinkedIn</a></p>
+									</header>
+								</article>
 					</div>
 				<!-- Footer -->
 					<div id="footer">
