contact form addition

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon brands fa-github"><span>GitHub</span></a>
 						<a href="#LinkedIn" class="icon brands fa-linkedin"><span>LinkedIn</span></a>
+						<a href="#Contact" class="icon brands fa-envelope"><span>Contact</span></a>
 					</nav>
 					<div id="main">
 							<article id="home" class="panel intro">
@@ -35,17 +36,25 @@
 							</a>
 						</article>
 								<article id="LinkedIn" class="panel intro">
-
-									<a href="#work" class="jumplink pic">
-										<span class="notarrow icon solid fa-chevron-left"><span>See my work</span></span>
-										<img src="images/20160714_161520.jpg" alt="" />
-									</a>
 									<header>
 										<h1>Resume</h1>
 										<p>I am a SQL Developer currently working at BootBarn in Orange County, CA.<br />
 										<a href="https://www.linkedin.com/in/gideonvictor/" target="_blank"><i class="icon brands fa-linkedin"></i> LinkedIn</a></p>
 									</header>
+									<a href="#Contact" class="jumplink pic">
+										<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+										<img src="images/20160714_161520.jpg" alt="" />
+									</a>
 								</article>
+							<article id="Contact" class="panel">
+								<section>
+									<div class="row">
+										<div class="col-12">
+											<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfaD4Yh_y34hmqwgksxibRnZvOPJLirugd1MtU_8CIGZtcV5g/viewform?embedded=true" width=100% height="650" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+										</div>
+									</div>
+								</section>
+							</article>
 					</div>
 				<!-- Footer -->
 					<div id="footer">
