bottom link presentation

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>Design: Victor Investments</li>
+							<li><a href="https://gideonvictor.com/presentation/Verses" target="_blank">Design: Victor Investments</a></li>
 						</ul>
 					</div>
 			</div>
