better navigation to presentation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon brands fa-github"><span>GitHub</span></a>
 						<a href="#LinkedIn" class="icon brands fa-linkedin"><span>LinkedIn</span></a>
-						<a href="#Contact" class="icon brands fa-envelope"><span>Contact</span></a>
+						<a href="#Contact" class="icon brands fa-inbox"><span>Contact</span></a>
 					</nav>
 					<div id="main">
 							<article id="home" class="panel intro">
@@ -59,7 +59,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li><a href="https://gideonvictor.com/presentation/Verses" target="_blank">Design: Victor Investments</a></li>
+							<li><a href="https://gideonvictor.com/presentation/TheHumanExperience" target="_blank">Design: Victor Investments</a></li>
 						</ul>
 					</div>
 			</div>
