updating csv files

--- a/d3binning_0.html
+++ b/d3binning_0.html
@@ -19,7 +19,6 @@ svg {
 
 <div id="my_dataviz"></div>
 
-
 <script>
 
 // set the dimensions and margins of the graph
@@ -42,7 +41,7 @@ d3.csv("https://gideonvictor.com/kings_0.csv", function(data) {
   // Add X axis
   var x = d3.scaleLinear()
     .domain([-100, 100])
-    .range([ 0, width ]);
+    .range([ 10, width ]);
   svg.append("g")
     .attr("transform", "translate(0," + height + ")")
     // .call(d3.axisBottom(x));
@@ -62,7 +61,7 @@ d3.csv("https://gideonvictor.com/kings_0.csv", function(data) {
 
   // Prepare a color palette
   var color = d3.scaleLinear()
-      .domain([-1, 15]) // Number of points in the bin?
+      .domain([0, 15]) // Number of points in the bin?
       .range(["Transparent",  "#8B0000"])
 
   // Compute the hexbin data
@@ -88,5 +87,67 @@ d3.csv("https://gideonvictor.com/kings_0.csv", function(data) {
       .attr("stroke", "black")
       .attr("stroke-width", "0")
 })
+
+
+//
+//
+// d3.csv("https://gideonvictor.com/hurricanes_0.csv", function(data) {
+//
+//   // Add X axis
+//   var x = d3.scaleLinear()
+//     .domain([0, 100])
+//     .range([ width/2, width-10]);
+//   svg.append("g")
+//     .attr("transform", "translate(0," + height + ")")
+//     .call(d3.axisBottom(x));
+//
+//   // Add Y axis
+//   var y = d3.scaleLinear()
+//     .domain([-50, 50])
+//     .range([ height, 0 ]);
+//   svg.append("g")
+//   .attr("transform", "translate(0," + height + ")")
+//     .call(d3.axisLeft(y));
+//
+//   // Reformat the data: d3.hexbin() needs a specific format
+//   var otherinputForHexbinFun = []
+//   data.forEach(function(d) {
+//     otherinputForHexbinFun.push( [x(d.x), y(d.y)] )  // Note that we had the transform value of X and Y !
+//   })
+//
+//   // Prepare a color palette
+//   var color = d3.scaleLinear()
+//       .domain([0, 15]) // Number of points in the bin?
+//       .range(["Transparent",  "#4169E1"])
+//
+//   // Compute the hexbin data
+//   var hexbin = d3.hexbin()
+//     .radius(12) // size of the bin in px
+//     .extent([ [0, 0], [width, height] ])
+//
+//   // Plot the hexbins
+//   svg.append("clipPath")
+//       .attr("id", "clip")
+//     .append("rect")
+//       .attr("width", width)
+//       .attr("height", height)
+//
+//   svg.append("g")
+//     .attr("clip-path", "url(#clip)")
+//     .selectAll("path")
+//     .data( hexbin(otherinputForHexbinFun) )
+//     .enter().append("path")
+//       .attr("d", hexbin.hexagon())
+//       .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; })
+//       .attr("fill", function(d) { return color(d.length); })
+//       .attr("stroke", "black")
+//       .attr("stroke-width", "0")
+// })
+//
+//
+
+
+
+
 
 </script>
