--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<!-- Load d3.js -->
 		<script src="https://d3js.org/d3.v4.js"></script>
+
 		<!-- specific plugin -->
 		<script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
 		<title>Gideon Victor</title>
@@ -85,4 +86,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/ddd3.js"></script>
+
+	</body>
 </html>
