--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-180528799-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-180528799-1');
+		</script>
+
 		<!-- Load d3.js -->
 		<script src="https://d3js.org/d3.v4.js"></script>
 		<!-- specific plugin -->
 		<script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
-		
+
 		<title>Gideon Victor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
