Coyotes game update

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									<section>
 										<div class="row">
 											<div class="col-12">
-												<h1 style = "text-align:center;">Kings vs. Hurricanes</h1>
+												<h1 style = "text-align:center;">Kings vs. Coyotes</h1>
 												<div id="my_dataviz"></div>
 											</div>
 										</div>
