--- a/rink.html
+++ b/rink.html
@@ -7,8 +7,15 @@
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
+
 		  gtag('config', 'UA-180528799-1');
 		</script>
+
+		<!-- Load d3.js -->
+		<script src="https://d3js.org/d3.v4.js"></script>
+		<!-- specific plugin -->
+		<script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
+
 		<title>Gideon Victor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -19,7 +26,8 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon brands fa-github"><span>GitHub</span></a>
 						<a href="#LinkedIn" class="icon brands fa-linkedin"><span>LinkedIn</span></a>
-						<a href="#Contact" class="icon fa-address-card"><span>Contact</span></a>
+						<a href="#Contact" class="icon fa-inbox"><span>Contact</span></a>
+						<a href="#Display" class="icon fa-image"><span>Display</span></a>
 					</nav>
 					<div id="main">
 							<article id="home" class="panel intro">
@@ -63,6 +71,16 @@
 										</div>
 									</section>
 								</article>
+								<article id="Display" class="panel">
+									<section>
+										<div class="row">
+											<div class="col-12">
+												<h1 style = "text-align:center;">Kings vs. Coyotes</h1>
+												<div id="my_dataviz"></div>
+											</div>
+										</div>
+									</section>
+								</article>
 					</div>
 				<!-- Footer -->
 					<div id="footer">
@@ -77,5 +95,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/ddd3.js"></script>
+
 	</body>
 </html>
