update the presentation link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li><a href="https://gideonvictor.com/presentation/TheHumanExperience" target="_blank">Design: Victor Investments</a></li>
+							<li><a href="https://gideonvictor.com/presentation/production/TheHumanExperience" target="_blank">Presentations</a></li>
 						</ul>
 					</div>
 			</div>
