--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+		<body>
 			<div id="wrapper">
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
