--- a/sandboxoverlap.html
+++ b/sandboxoverlap.html
@@ -12,13 +12,30 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="sandboxassets/css/main.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="sandboxassets/css/noscript.css" /></noscript>
 	</head>
 	<body>
+<div style="  margin: auto;
+width: 960px;
+padding: 10px;">
+<h1 style="text-align:center;
+font-size:30px;
+font-family: 'Montserrat', sans-serif;">
+Fuasdfll Rink, Horizontal
+</h1>
+<form>
+  <!-- <input type=range min=2 max=20 step=.1 value = 10 id="sliderrr" style="width:680px;"> -->
+	<input type = "range" min="0" max="30" value="10" step=".1" id="slider" style="width:680px;"/>
+  <output style="font-size:smaller;font-style:oblique;" name=o></output>
+</form>
+<div class="chart" id="my_dataviz">
+<div class="chart" id="full-rink-horz">
 
-													<h3>Full Rink, Horizontal</h3>
-														<div class="chart" id="full-rink-horz">
-			</div>
+</div>
+</div>
 		<!-- Scripts -->
 			<script src="sandboxassets/js/jquery.min.js"></script>
 			<script src="sandboxassets/js/browser.min.js"></script>
@@ -26,6 +43,7 @@
 			<script src="sandboxassets/js/util.js"></script>
 			<script src="sandboxassets/js/main.js"></script>
 			<script src="sandboxassets/js/rinkplot.js"></script>
+			<script src="sandboxassets/js/ddd3.js"></script>
 			<script>
 
 			</script>
