--- a/rink.html
+++ b/rink.html
@@ -24,8 +24,8 @@ padding: 10px;">
 <h1 style="text-align:center;
 font-size:30px;
 font-family: 'Montserrat', sans-serif;">
-Kings v. Kraken <br />
-2022-01-15
+Kings v. Lightning <br />
+2022-01-18
 </h1>
 <form>
   <!-- <input type=range min=2 max=20 step=.1 value = 10 id="sliderrr" style="width:680px;"> -->
