--- a/rink.html
+++ b/rink.html
@@ -3,19 +3,17 @@
 	<head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
 		<!-- Load d3.js -->
 		<script src="https://d3js.org/d3.v4.js"></script>
 		<!-- specific plugin -->
 		<script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
-
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="sandboxassets/css/main.css" />
+		<link rel="stylesheet" href="sandboxassets/css/main.less" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-		<noscript><link rel="stylesheet" href="sandboxassets/css/noscript.css" /></noscript>
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+		<noscript><link rel="stylesheet" href="sandboxassets/css/noscript.less" /></noscript>
 	</head>
 	<body>
 <div style="  margin: auto;
