--- a/rink.html
+++ b/rink.html
@@ -9,11 +9,11 @@
 		<script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="sandboxassets/css/main.less" type="text/css"/>
+		<link rel="stylesheet" href="sandboxassets/css/main.css"/>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-		<noscript><link rel="stylesheet" href="sandboxassets/css/noscript.less" type="text/css"/></noscript>
+		<noscript><link rel="stylesheet" href="sandboxassets/css/noscript.css"/></noscript>
 	</head>
 	<body>
 <div style="  margin: auto;
