Update Game Text

--- a/rink.html
+++ b/rink.html
@@ -9,11 +9,11 @@
 		<script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="sandboxassets/css/main.css" type="text/css"/>
+		<link rel="stylesheet" href="sandboxassets/css/main.css"/>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-		<noscript><link rel="stylesheet" href="sandboxassets/css/noscript.css" type="text/css"/></noscript>
+		<noscript><link rel="stylesheet" href="sandboxassets/css/noscript.css"/></noscript>
 	</head>
 	<body>
 <div style="  margin: auto;
@@ -22,8 +22,8 @@ padding: 10px;">
 <h1 style="text-align:center;
 font-size:30px;
 font-family: 'Montserrat', sans-serif;">
-Kings v. Panthers<br />
-2022-03-19
+Kings v. Sharks<br />
+2022-03-17
 </h1>
 <form>
   <!-- <input type=range min=2 max=20 step=.1 value = 10 id="sliderrr" style="width:680px;"> -->
