Blue Jackets Data

--- a/rink.html
+++ b/rink.html
@@ -22,8 +22,8 @@ padding: 10px;">
 <h1 style="text-align:center;
 font-size:30px;
 font-family: 'Montserrat', sans-serif;">
-Kings v. Avs<br />
-2022-04-13
+Kings v. Blue Jackets<br />
+2022-04-16
 </h1>
 <form>
   <!-- <input type=range min=2 max=20 step=.1 value = 10 id="sliderrr" style="width:680px;"> -->
@@ -43,9 +43,6 @@ Kings v. Avs<br />
 			<script src="sandboxassets/js/main.js"></script>
 			<script src="sandboxassets/js/rinkplot.js"></script>
 			<script src="sandboxassets/js/ddd3.js"></script>
-			<script>
-
-			</script>
 			</body>
 	</body>
 </html>
