--- a/rink.html
+++ b/rink.html
@@ -22,8 +22,8 @@ padding: 10px;">
 <h1 style="text-align:center;
 font-size:30px;
 font-family: 'Montserrat', sans-serif;">
-Kings v. Blue Jackets<br />
-2022-04-16
+Kings v. Ducks<br />
+2022-04-19
 </h1>
 <form>
   <!-- <input type=range min=2 max=20 step=.1 value = 10 id="sliderrr" style="width:680px;"> -->
