--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="images/beach.webp" alt="" />
 								</a>
 							</article>
 						<!-- Work -->
 						<article id="work" class="panel intro">
 							<header>
 								<h1>Work</h1>
-								<p>Lately, I've been working on using Python to scrape data from html and json reports from the NHL. I have also been working on a python app that connects to the eTrade API. Visit my GitHub to see some of my progress.<a href="https://github.com/gideonvictor" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
+								<p>Currently, I am working on aggregating tax and geographical information for the City of Mission Viejo to help direct public funds most efficiently. Pictured is a data-visualization of property tax per acre in the city for all commercial properties.<a href="https://github.com/gideonvictor" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
 							</header>
 							<a href="#LinkedIn" class="jumplink pic">
 								<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-								<img src="images/20160704_0856200.jpg" alt="" />
+								<img src="images/mission.webp" alt="" />
 							</a>
 						</article>
 								<article id="LinkedIn" class="panel intro">
@@ -53,7 +53,7 @@
 									</header>
 									<a href="#Contact" class="jumplink pic">
 										<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-										<img src="images/20160714_161520.jpg" alt="" />
+										<img src="images/hockey.webp" alt="" />
 									</a>
 								</article>
 								<article id="Contact" class="panel">
@@ -69,7 +69,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li><a href="https://gideonvictor.com/presentation/production/Presentations.html" target="_blank">Presentations</a></li>
+							<li><a href="https://presentation.gideonvictor.com" target="_blank">Presentations</a></li>
 						</ul>
 					</div>
 			</div>
