Updating data visualization

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<article id="work" class="panel intro">
 							<header>
 								<h1>Work</h1>
-								<p>Currently, I am working on aggregating tax and geographical information for the City of Mission Viejo to help direct public funds most efficiently. Pictured is a data-visualization of property tax per acre in the city for all commercial properties.<a href="https://github.com/gideonvictor" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
+								<p>Currently, I am working on aggregating tax and geographical information for the City of Mission Viejo to help direct public funds most efficiently. Pictured is a data-visualization of property tax per acre in the city for a mix of commercial and residential parcels.<a href="https://github.com/gideonvictor" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
 							</header>
 							<a href="#LinkedIn" class="jumplink pic">
 								<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
