--- a/mission.html
+++ b/mission.html
@@ -10,77 +10,112 @@
 <!-- Create a div where the graph will take place -->
 <div id="my_dataviz">
 <img src="images/missionnn.png" width=1600px style="position:absolute;opacity:800%;z-index: -1"alt="" />
+<div class="slidecontainer">
+  <input type="range" min="1" max="20" value="sliderValue" class="slider" id="myRange" />
+  <p id="sliderValueRee">a</p>
+</div>
 </div>
 
 
 <script>
+  var slider = document.getElementById("myRange");
 
-// set the dimensions and margins of the graph
-var margin = {top: 82, right: 80, bottom: -280, left: 40},
-    width = 1600 - margin.left - margin.right,
-    height = 1600- margin.top - margin.bottom;
+  var output = document.getElementById("myRange");
+  console.log('output', output);
 
-// append the svg object to the body of the page
+  // set the dimensions and margins of the graph
+  var margin = {top: 15, right: 75, bottom: -70, left: 35},
+      width = 1600 - margin.left - margin.right,
+      height = 1710- margin.top - margin.bottom;
 
-var svg = d3.select("#my_dataviz")
-  .append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform",
-          "translate(" + margin.left + "," + margin.top + ")");
+  // append the svg object to the body of the page
+
+  var svg = d3.select("#my_dataviz")
+    .append("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+      .attr("transform",
+            "translate(" + margin.left + "," + margin.top + ")");
 
 
-// read data
-d3.csv("https://gideonvictor.com/outttt.csv", function(data) {
+  // read data
+  d3.csv("https://gideonvictor.com/outttt.csv", function(data) {
+    console.log(data)
+    // Add X axis
+    var x = d3.scaleLinear()
+      .domain([-80000000, 80000000])
+      .range([ 0, width ]);
+    svg.append("g")
+      .attr("transform", "translate(0," + height + ")")
+      .call(d3.axisBottom(x));
 
-  // Add X axis
-  var x = d3.scaleLinear()
-    .domain([-80000000, 80000000])
-    .range([ 0, width ]);
-  svg.append("g")
-    .attr("transform", "translate(0," + height + ")")
-    .call(d3.axisBottom(x));
+    // Add Y axis
+    var y = d3.scaleLinear()
+      .domain([-80000000, 80000000])
+      .range([ height, 0 ]);
+    svg.append("g")
+      .call(d3.axisLeft(y));
 
-  // Add Y axis
-  var y = d3.scaleLinear()
-    .domain([-80000000, 80000000])
-    .range([ height, 0 ]);
-  svg.append("g")
-    .call(d3.axisLeft(y));
+    // Reformat the data: d3.hexbin() needs a specific format
+    var inputForHexbinFun = []
+    data.forEach(function(d) {
+      inputForHexbinFun.push( [x(d.x), y(d.y)] )  // Note that we had the transform value of X and Y !
+    })
 
-  // Reformat the data: d3.hexbin() needs a specific format
-  var inputForHexbinFun = []
-  data.forEach(function(d) {
-    inputForHexbinFun.push( [x(d.x), y(d.y)] )  // Note that we had the transform value of X and Y !
-  })
+  slider.oninput = function() {
 
-  // Prepare a color palette
-  var color = d3.scaleLinear()
-      .domain([0, 600]) // Number of points in the bin?
-      .range(["transparent",  "#002775"])
+    d3.selectAll("g > *").remove()
+    output.innerHTML = this.value;
+    console.log('output', output.value);
+    document.getElementById("sliderValueRee").value = output.value;
 
-  // Compute the hexbin data
-  var hexbin = d3.hexbin()
-    .radius(10) // size of the bin in px
-    .extent([ [0, 0], [width, height] ])
+    hexbin = d3.hexbin()
+        .x(d => x(d.x))
+        .y(d => y(d.y))
+        .radius(output.value)
+        .extent([[margin.left, margin.top], [width - margin.right, height - margin.bottom]])
 
-  // Plot the hexbins
-  svg.append("clipPath")
+    bins = hexbin(data)
+    //ggg = d3.max(bins, d => d.length)
+    //console.log(d3.max(bins, d => d.length))
+
+    // Prepare a color palette
+    var color = d3.scaleLinear()
+      .domain([0, d3.max(bins, d => d.length)*.5]) // Number of points in the bin?
+      .range(["#ff0000",  "#002775"])
+
+    // Compute the hexbin data
+    var hexbin = d3.hexbin()
+      .radius(output.value) // size of the bin in px
+      .extent([ [0, 0], [width, height] ])
+
+// console.log(color)
+
+    // console.log(document.getElementById("my_dataviz"));
+
+    // Plot the hexbins
+    svg.append("clipPath")
       .attr("id", "clip")
-    .append("rect")
+      .append("rect")
       .attr("width", width)
       .attr("height", height)
 
-  svg.append("g")
-    .attr("clip-path", "url(#clip)")
-    .selectAll("path")
-    .data( hexbin(inputForHexbinFun) )
-    .enter().append("path")
+    svg.append("g")
+      .attr("clip-path", "url(#clip)")
+      .selectAll("path")
+      .data( hexbin(inputForHexbinFun) )
+      .enter().append("path")
       .attr("d", hexbin.hexagon())
       .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; })
       .attr("fill", function(d) { return color(d.length); })
       .attr("stroke", "black")
       .attr("stroke-width", "0.25")
-})
+
+
+
+      //console.log(Math.max(color))
+    }
+
+  })
 </script>
