--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon brands fa-github"><span>GitHub</span></a>
 						<a href="#LinkedIn" class="icon brands fa-linkedin"><span>LinkedIn</span></a>
+						<a href="#Store" class="icon solid fa-store"><span>Store</span></a>
 						<a href="#Contact" class="icon fa-address-card"><span>Contact</span></a>
 					</nav>
 					<div id="main">
@@ -45,17 +46,28 @@
 								<img src="images/mission.webp" alt="" />
 							</a>
 						</article>
-								<article id="LinkedIn" class="panel intro">
-									<header>
-										<h1>Resume</h1>
-										<p>I am a SQL Developer currently working at BootBarn in Orange County, CA.<br />
-										<a href="https://www.linkedin.com/in/gideonvictor/" target="_blank"><i class="icon brands fa-linkedin"></i> LinkedIn</a></p>
-									</header>
-									<a href="#Contact" class="jumplink pic">
-										<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-										<img src="images/hockey.webp" alt="" />
-									</a>
-								</article>
+						<article id="LinkedIn" class="panel intro">
+							<header>
+								<h1>Resume</h1>
+								<p>I am a SQL Developer currently working at BootBarn in Orange County, CA.<br />
+								<a href="https://www.linkedin.com/in/gideonvictor/" target="_blank"><i class="icon brands fa-linkedin"></i> LinkedIn</a></p>
+							</header>
+							<a href="#Store" class="jumplink pic">
+								<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+								<img src="images/hockey.webp" alt="" />
+							</a>
+						</article>
+						<article id="Store" class="panel intro">
+							<header>
+								<h1>Store</h1>
+								<p>I usually have things for sale. See the link below.<br />
+								<a href="https://www.ebay.com/sch/missionviejocompany/m.html" target="_blank"><i class="icon brands fa-ebay"></i> Ebay</a></p>
+							</header>
+							<a href="#Contact" class="jumplink pic">
+								<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+								<img src="images/baseball.webp" alt="" />
+							</a>
+						</article>
 								<article id="Contact" class="panel">
 									<section>
 										<div class="row">
