--- a/mission.html
+++ b/mission.html
@@ -9,9 +9,9 @@
 
 <!-- Create a div where the graph will take place -->
 <div id="my_dataviz">
-<img src="images/missionnn.png" width=1600px style="position:absolute;opacity:800%;z-index: -1"alt="" />
+<img src="images/missionnn.png" width=1600px style="position:absolute;opacity:50%;z-index: -1"alt="" />
 <div class="slidecontainer">
-  <input type="range" min="1" max="20" value="sliderValue" class="slider" id="myRange" />
+  <input type="range" min="1" max="20" value="sliderValue" class="slider" step =".1" id="myRange" />
   <p id="sliderValueRee">a</p>
 </div>
 </div>
@@ -21,10 +21,10 @@
   var slider = document.getElementById("myRange");
 
   var output = document.getElementById("myRange");
-  console.log('output', output);
+  //console.log('output', output);
 
   // set the dimensions and margins of the graph
-  var margin = {top: 15, right: 75, bottom: -70, left: 35},
+  var margin = {top: 5, right: 75, bottom: -80, left: 35},
       width = 1600 - margin.left - margin.right,
       height = 1710- margin.top - margin.bottom;
 
@@ -67,30 +67,30 @@
 
     d3.selectAll("g > *").remove()
     output.innerHTML = this.value;
-    console.log('output', output.value);
+    //console.log('output', output.value);
     document.getElementById("sliderValueRee").value = output.value;
 
-    hexbin = d3.hexbin()
+    hexbinnn = d3.hexbin()
         .x(d => x(d.x))
         .y(d => y(d.y))
         .radius(output.value)
         .extent([[margin.left, margin.top], [width - margin.right, height - margin.bottom]])
 
-    bins = hexbin(data)
+    bins = hexbinnn(data)
     //ggg = d3.max(bins, d => d.length)
     //console.log(d3.max(bins, d => d.length))
 
     // Prepare a color palette
     var color = d3.scaleLinear()
-      .domain([0, d3.max(bins, d => d.length)*.5]) // Number of points in the bin?
-      .range(["#ff0000",  "#002775"])
+      .domain([0, d3.max(bins, d => d.length)]) // Number of points in the bin?
+      .range(["#ff0000",  "#1E5162"])
 
     // Compute the hexbin data
     var hexbin = d3.hexbin()
       .radius(output.value) // size of the bin in px
       .extent([ [0, 0], [width, height] ])
 
-// console.log(color)
+    // console.log(color)
 
     // console.log(document.getElementById("my_dataviz"));
 
@@ -114,7 +114,7 @@
 
 
 
-      //console.log(Math.max(color))
+      // console.log(d3.max(bins, d => d.length)*.5)
     }
 
   })
